<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ImageViewForDrawing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="300px"
        android:minWidth="300px"
        android:layout_margin="20px">
    </ImageView>

    <RadioGroup
        android:id="@+id/exSelRadioGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/exRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second_act_radio_btn_text" />

        <RadioButton
            android:id="@+id/exRadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second_act_radio_btn_text2" />

        <RadioButton
            android:id="@+id/exRadioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second_act_radio_btn_text3" />

        <RadioButton
            android:id="@+id/exRadioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second_act_radio_btn_text4" />
    </RadioGroup>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_act_btn_txt" />
</LinearLayout>